<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">CoT Forwarder</string>
    <!-- description -->
    <string name="app_desc">Selektywne przesylanie znacznikow (CoT) do zewnetrznego urzadzenia (Raspberry Pi) z pominieciem serwera TAK.</string>

    <!-- Preferencje -->
    <string name="pref_title">CoT Forwarder</string>
    <string name="pref_ip_title">Adres IP odbiornika (Raspberry Pi)</string>
    <string name="pref_ip_summary">Domyslnie 192.168.42.50 (Pi na interfejsie USB tethering)</string>
    <string name="pref_port_title">Port</string>
    <string name="pref_port_summary">Port docelowy odbiornika (domyslnie 18999)</string>
    <string name="pref_proto_title">Protokol</string>
    <string name="pref_proto_summary">UDP (bezpolaczeniowy) lub TCP (strumieniowy)</string>

    <!-- ListPreference dla protokolu -->
    <string-array name="proto_entries">
        <item>UDP</item>
        <item>TCP</item>
    </string-array>
    <string-array name="proto_values">
        <item>UDP</item>
        <item>TCP</item>
    </string-array>
</resources>
